Ended main part of EventsTest.java with filter checks, lots of small refactoring and tweaks